--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    height: 100vh;
+    height: auto;
     background: linear-gradient(#000428, #004e92);
     color: #fff;
 }
@@ -22,26 +22,36 @@ body{
 }
 
 .secao-imagem > figure > .imagem{
-    width: 130px;
-    height: 130px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
 }
 
 
 .secao-secundaria{
     width: 100%;
-    height: 50vh;
+    /* height: 50vh; */
 }
 
-.secao-secundaria > .lista-links{
-    height: 40vh;
-    padding: 0 2%;
+.secao-secundaria > .lista-links > .lista{
+   max-width: 50vw;
+   margin: 0 auto;
 }
+
+
 
 .secao-secundaria > .lista-links > .lista > .item-lista{
   width: 100%;
-  height: 20px;
-  background-color: #fff;
+  padding: 1em;
+  border: 2px solid #fff;
   margin: 1em 0;
-  
 } 
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links > .icone2{
+    /* background-image: url('../icon/linkedin.svg');
+    width: 30px;
+    height: 30px;
+    background-size: contain;
+    display: inline-block; */
+  }
+
