--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -1,8 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,700&display=swap');
 body{
     height: auto;
     background: linear-gradient(#000428, #004e92);
     color: #fff;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .containe{
@@ -27,31 +28,77 @@ body{
     border-radius: 50%;
 }
 
-
 .secao-secundaria{
     width: 100%;
-    /* height: 50vh; */
 }
 
 .secao-secundaria > .lista-links > .lista{
-   max-width: 50vw;
-   margin: 0 auto;
+   max-width: 26vw;
+   border: 2px solid #ccc;
+   margin: 0 auto;   
 }
-
-
 
 .secao-secundaria > .lista-links > .lista > .item-lista{
   width: 100%;
-  padding: 1em;
-  border: 2px solid #fff;
+  padding: 0.4em;
   margin: 1em 0;
 } 
 
-.secao-secundaria > .lista-links > .lista > .item-lista > .links > .icone2{
-    /* background-image: url('../icon/linkedin.svg');
-    width: 30px;
-    height: 30px;
-    background-size: contain;
-    display: inline-block; */
+.secao-secundaria > .lista-links > .lista > .item-lista:hover{
+    transition: 0.8s;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+
+  @keyframes flutuacao {
+    0%,100%{
+        transform: translateY(3px);
+    }
+
+    50%{
+        transform: translateY(-5px);
+    }
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 0.5em;
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links > .icone{
+    width: 33px;
+    height: 33px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    animation: flutuacao 6s ease-in-out infinite;
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-facebook{
+    background-image: url('../icon/facebook.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-instagran{
+    background-image: url('../icon/instagram.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-linkedin{
+    background-image: url('../icon/linkedin.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-github{
+    background-image: url('../icon/github.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-email{
+    background-image: url('../icon/Envelope.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-twiter{
+    background-image: url('../icon/twitter.svg');
+  }
+
+.secao-secundaria > .lista-links > .lista > .item-lista > .links .icone-{
+    background-image: url('../icon/.svg');
   }
 
